# pubsub2inbox

./: .gitignore  CONTRIBUTING.md  Dockerfile  LEGACY.md  Makefile  PROCESSORS.md  README.md  container-signature.pub  main.py  main.tf  outputs.tf  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.in  variables.tf
_vendor/: python-docker.LICENSE  python_docker.pyi  vendor.txt
docs/: Makefile  conf.py  filters.rst  helpers.rst  index.rst  modules.rst  output.rst  processors.rst  test.rst
examples/: chat-example.yaml  cloud-deploy-bot.yaml  cloud-run-jobs.yaml  computeengine-example.yaml  container-analysis-slack.yaml  container-analysis.yaml  dns-example.yaml  github.yaml  opsgenie-example.yaml  secret-example.yaml  shellscript-config.yaml  transcode-example.yaml  utilities-example.yaml  vertex-search.yaml
filters/: __init__.py  date.py  regex.py  strings.py
helpers/: base.py
output/: base.py  bigquery.py  chat.py  delay.py  gcs.py  httpresponse.py  logger.py  mail.py  slack.py  test.py
patches/: python_docker.patch
processors/: base.py  bigquery.py  budget.py  cai.py  clouddeploy.py  cloudrun.py  compress.py  computeengine.py  containeranalysis.py  debug.py  directory.py  dns.py  docker.py  download.py  genericjson.py  git.py  github.py  groups.py  loadbalancing.py  logging.py  monitoring.py  opsgenie.py  projects.py  recommendations.py  scc.py  secret.py  setvariable.py  shellscript.py  slack.py  storage.py  transcode.py  vertexai.py  vertexgenai.py
test/: helpers.py  test_filters.py  test_handling.py  test_ingcp.py  test_macros.py  (+5 more)
(+90 files in other folders)
